--- a/pubby_web/web/index.html
+++ b/pubby_web/web/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <script src="packages/web_components/webcomponents-lite.min.js"></script>
-    <title>Angel Brain</title>
+    <title>Pubby</title>
     <style>
         html, body {
             margin: 0;
@@ -13,7 +12,7 @@
     </style>
 </head>
 <body>
-<angel-brain>Loading...</angel-brain>
+<pubby-app>Loading...</pubby-app>
 <script src="main.dart" type="application/dart"></script>
 <script src="packages/browser/dart.js" type="text/javascript"></script>
 </body>
