Start on front-end...

--- a/pubby_web/web/index.html
+++ b/pubby_web/web/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Pubby</title>
-    <style>
-        html, body {
-            margin: 0;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.22/css/uikit.min.css"/>
+    <link rel="stylesheet" href="pubby.css">
 </head>
 <body>
 <pubby-app>Loading...</pubby-app>
